--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ pip-wheel-metadata/
 *.bak
 *.swp
 *.swo
+CODEX_WORKPLAN.md
+AGENTS.md
 
 # --- IDE / editor / OS noise ---
 .vscode/
@@ -72,7 +74,11 @@ data/processed/
 
 # Optional: raw/downloaded data (uncomment if you never want to track it)
 # data/raw/
-# data/tripdata/
+data/tripdata/
+# Large raw traffic counts (keep out of VCS)
+data/raw_traffic_counts/
+# Local scratch/cache
+cache/
 # *.csv
 
 # --- Frontend / web toolchains (safe even if you don't use them now) ---
