--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "osmnx>=1.9.3",
     "pandas>=2.3.3",
+    "pyproj>=3.6.1",
+    "openpyxl>=3.1.5",
     "requests>=2.32.5",
+    "scikit-learn>=1.4.2",
+    "shapely>=2.0.6",
+    "tqdm>=4.67.1",
 ]
